--- a/src/components/Projects/ProjectList/ProjectList.module.scss
+++ b/src/components/Projects/ProjectList/ProjectList.module.scss
@@ -10,7 +10,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin-bottom: 8rem;
+        margin-bottom: 4rem;
 
         @media only screen and (max-width: 600px) {
             margin-inline: 1.6rem;
